--- a/session1.html
+++ b/session1.html
@@ -11,6 +11,7 @@
       <script src="../dist/plugin-fullscreen.js"></script>
       <script src="../dist/plugin-preload.js"></script>
       <script src="../dist/plugin-html-keyboard-response.js"></script>
+      <script src="../dist/plugin-html-button-response.js"></script>
       <script src="../dist/plugin-audio-keyboard-response.js"></script>
       <script src="../dist/plugin-survey-text.js"></script>
 
